fix (minor): link animation | add: stackoverflow icon

--- a/assets/styles/scss/fontawesome/scss/_icons.scss
+++ b/assets/styles/scss/fontawesome/scss/_icons.scss
@@ -18,6 +18,7 @@ readers do not read off random characters that represent icons */
 // .#{$fa-css-prefix}-medium-m:before { content: fa-content($fa-var-medium-m); }
 .#{$fa-css-prefix}-file:before { content: fa-content($fa-var-file); }
 .#{$fa-css-prefix}-dev:before { content: fa-content($fa-var-dev); }
+.#{$fa-css-prefix}-stack-overflow:before { content: fa-content($fa-var-stack-overflow); }
 
 // .#{$fa-css-prefix}-500px:before { content: fa-content($fa-var-500px); }
 // .#{$fa-css-prefix}-accessible-icon:before { content: fa-content($fa-var-accessible-icon); }
